--- a/sample.env
+++ b/sample.env
@@ -4,10 +4,10 @@
 ## -- Required --
 
 # Brainshop.ai api key
-AI_API_KEY=
+API_KEY=
 
 # Brainshop.ai brain id
-AI_BID=
+BRAIN_ID=
 
 # Your bot token from @BotFather
 BOT_TOKEN=
